--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,11 +2,12 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>Comunication_LTD</display-name>
   <welcome-file-list>
-    <welcome-file>Login</welcome-file>
+    <welcome-file>Login.html</welcome-file>
     <welcome-file>Login.htm</welcome-file>
     <welcome-file>Login.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>Default.html</welcome-file>
+    <welcome-file>Default.htm</welcome-file>
+    <welcome-file>Default.jsp</welcome-file>
   </welcome-file-list>
+  
 </web-app>
